# sports_betting

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/codeql/extensions/sports_betting-python/: codeql-pack.yml
.github/workflows/: create-pr-release.yml  documentation.yml  release.yml  test.yml
docs/source/: conf.py  index.rst  utils.rst
docs/source/utils/: http_connector.rst  logger.rst  mlflow_model_manager.rst  typed_dict_factory.rst
src/: __init__.py
src/ssa/utils/: http_connector.py  logger.py  mlflow_model_manager.py  typed_dict_factory.py
src/utils/: __init__.py  http_connector.py  logger.py  mlflow_model_manager.py  model_manager.py  test_logger.py  typed_dict_factory.py
tests/utils/: test_http_connector.py  test_logger.py  test_mlflow_model_manager.py  test_typed_dict_factory.py
